updating jupyter notebooks

--- a/notebooks/testing/test_semantic_discrim.ipynb
+++ b/notebooks/testing/test_semantic_discrim.ipynb
@@ -2,35 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "04b14ba6",
+   "execution_count": null,
+   "id": "ce2cbecb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing coco api...\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.75s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=20.45s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "Initializing coco api...\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.55s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=14.93s)\n",
-      "creating index...\n",
-      "index created!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# import basic modules\n",
@@ -63,51 +38,369 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1233f345",
+   "execution_count": 10,
+   "id": "4a622d41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading labels from /user_data/mmhender/nsd_stimuli/labels/S1_indoor_outdoor.csv...\n",
+      "n outdoor/n indoor/n ambiguous:\n",
+      "[6208, 3007, 785]\n",
+      "unique values:\n",
+      "[0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "subject=1\n",
+    "# this property is defined across whole images, so loading labels outside the pRF loop.\n",
+    "coco_labels_fn = os.path.join(default_paths.stim_labels_root, 'S%d_indoor_outdoor.csv'%subject)\n",
+    "print('Reading labels from %s...'%coco_labels_fn)\n",
+    "coco_df = pd.read_csv(coco_labels_fn, index_col=0)\n",
+    "ims_to_use = np.sum(np.array(coco_df)==1, axis=1)==1\n",
+    "labels = np.array(coco_df['has_indoor']).astype(np.float32)\n",
+    "labels[~ims_to_use] = np.nan\n",
+    "neach = [np.sum(labels==ll) for ll in np.unique(labels[~np.isnan(labels)])] + \\\n",
+    "        [np.sum(np.isnan(labels))]\n",
+    "print('n outdoor/n indoor/n ambiguous:')\n",
+    "print(neach)\n",
+    "unvals = np.unique(labels[ims_to_use])                               \n",
+    "print('unique values:')\n",
+    "print(unvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b06db00a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading labels from /user_data/mmhender/nsd_stimuli/labels/S1_within_prf_grid5/S1_cocolabs_binary_prf9.csv...\n"
+     ]
+    }
+   ],
+   "source": [
+    "coco_labels_fn  = '/user_data/mmhender/nsd_stimuli/labels/S1_within_prf_grid5/S1_cocolabs_binary_prf9.csv'\n",
+    "print('Reading labels from %s...'%coco_labels_fn)\n",
+    "coco_df = pd.read_csv(coco_labels_fn, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7508fa5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "['accessory',\n",
+       " 'animal',\n",
+       " 'appliance',\n",
+       " 'electronic',\n",
+       " 'food',\n",
+       " 'furniture',\n",
+       " 'indoor',\n",
+       " 'kitchen',\n",
+       " 'outdoor',\n",
+       " 'person',\n",
+       " 'sports',\n",
+       " 'vehicle',\n",
+       " 'person.1',\n",
+       " 'bicycle',\n",
+       " 'car',\n",
+       " 'motorcycle',\n",
+       " 'airplane',\n",
+       " 'bus',\n",
+       " 'train',\n",
+       " 'truck',\n",
+       " 'boat',\n",
+       " 'traffic light',\n",
+       " 'fire hydrant',\n",
+       " 'stop sign',\n",
+       " 'parking meter',\n",
+       " 'bench',\n",
+       " 'bird',\n",
+       " 'cat',\n",
+       " 'dog',\n",
+       " 'horse',\n",
+       " 'sheep',\n",
+       " 'cow',\n",
+       " 'elephant',\n",
+       " 'bear',\n",
+       " 'zebra',\n",
+       " 'giraffe',\n",
+       " 'backpack',\n",
+       " 'umbrella',\n",
+       " 'handbag',\n",
+       " 'tie',\n",
+       " 'suitcase',\n",
+       " 'frisbee',\n",
+       " 'skis',\n",
+       " 'snowboard',\n",
+       " 'sports ball',\n",
+       " 'kite',\n",
+       " 'baseball bat',\n",
+       " 'baseball glove',\n",
+       " 'skateboard',\n",
+       " 'surfboard',\n",
+       " 'tennis racket',\n",
+       " 'bottle',\n",
+       " 'wine glass',\n",
+       " 'cup',\n",
+       " 'fork',\n",
+       " 'knife',\n",
+       " 'spoon',\n",
+       " 'bowl',\n",
+       " 'banana',\n",
+       " 'apple',\n",
+       " 'sandwich',\n",
+       " 'orange',\n",
+       " 'broccoli',\n",
+       " 'carrot',\n",
+       " 'hot dog',\n",
+       " 'pizza',\n",
+       " 'donut',\n",
+       " 'cake',\n",
+       " 'chair',\n",
+       " 'couch',\n",
+       " 'potted plant',\n",
+       " 'bed',\n",
+       " 'dining table',\n",
+       " 'toilet',\n",
+       " 'tv',\n",
+       " 'laptop',\n",
+       " 'mouse',\n",
+       " 'remote',\n",
+       " 'keyboard',\n",
+       " 'cell phone',\n",
+       " 'microwave',\n",
+       " 'oven',\n",
+       " 'toaster',\n",
+       " 'sink',\n",
+       " 'refrigerator',\n",
+       " 'book',\n",
+       " 'clock',\n",
+       " 'vase',\n",
+       " 'scissors',\n",
+       " 'teddy bear',\n",
+       " 'hair drier',\n",
+       " 'toothbrush',\n",
+       " 'has_animate']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'a' in 'b'"
+    "list(coco_df.keys())\n",
+    "              "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "12e46d96",
+   "execution_count": 40,
+   "id": "6992654a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading labels from /user_data/mmhender/nsd_stimuli/labels/S1_within_prf_grid5/S1_cocolabs_stuff_binary_prf9.csv...\n"
+     ]
+    }
+   ],
+   "source": [
+    "coco_labels_fn  = '/user_data/mmhender/nsd_stimuli/labels/S1_within_prf_grid5/S1_cocolabs_stuff_binary_prf9.csv'\n",
+    "print('Reading labels from %s...'%coco_labels_fn)\n",
+    "coco_df = pd.read_csv(coco_labels_fn, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b6573360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[H\u001b[2J"
+     ]
+    }
+   ],
+   "source": [
+    "clear list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cc73f0c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-9d6eeb199649>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoco_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "l = list(coco_df.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "79e076d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = np.concatenate([np.array(coco_df['has_indoor'])[:,np.newaxis], np.array(coco_df['has_outdoor'])[:,np.newaxis]], axis=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9035cbc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>has_indoor</th>\n",
+       "      <th>has_outdoor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "53.033008588991066"
+       "      has_indoor  has_outdoor\n",
+       "0          False         True\n",
+       "1           True        False\n",
+       "2          False         True\n",
+       "3          False         True\n",
+       "4          False         True\n",
+       "...          ...          ...\n",
+       "9995       False         True\n",
+       "9996       False         True\n",
+       "9997       False        False\n",
+       "9998       False         True\n",
+       "9999        True        False\n",
+       "\n",
+       "[10000 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "np.sqrt((75**2)/2)"
+    "labels = np.array(coco_df)[:,0:12]\n",
+    "coco_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5c416c90",
+   "id": "a5c582a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa902278",
+   "id": "ac8b7496",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f75e2a56",
+   "id": "7ef05aeb",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f486afe4",
+   "id": "88144664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "123c33c1",
+   "id": "15ad4724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eab98ca",
+   "id": "f035365e",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e9236aac",
+   "id": "deb00ab6",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "97b80042",
+   "id": "2802fdfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "99a01578",
+   "id": "b9f8e800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "6c4bb21a",
+   "id": "6a7abb11",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b5ffc767",
+   "id": "08f9757e",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "4e7def6d",
+   "id": "29cca6ea",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "99c8c106",
+   "id": "0dcd9480",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "213a0f4d",
+   "id": "df5c7a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f2381b73",
+   "id": "dbfca378",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9c6115ad",
+   "id": "1d9fe474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "86c7f603",
+   "id": "773e31e1",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "372ccb0b",
+   "id": "7329b99b",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "648bc793",
+   "id": "c22aff41",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ec1394a3",
+   "id": "d25c44bb",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "f4a27f4f",
+   "id": "f71229f5",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "b4e83c0f",
+   "id": "97875f34",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "935fb3bc",
+   "id": "68c15d91",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "249de5ab",
+   "id": "b8a8a59f",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f6a51eb8",
+   "id": "dc4b18c8",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "335a6397",
+   "id": "96590e1e",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "009a0b24",
+   "id": "550a5478",
    "metadata": {},
    "outputs": [
     {
