--- a/notebooks/testing/test_clip.ipynb
+++ b/notebooks/testing/test_clip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f1afdfe",
+   "id": "f7317999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "id": "26da51d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fitting_types = ['semantic_lskdf','gabor']\n",
+    "np.any(['semantic' in ft for ft in fitting_types])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "bd89efe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, False]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['semantic' in ft for ft in fitting_types]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "2ccbd7b8",
+   "id": "9cf99b20",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "09d64ac5",
+   "id": "19c1de60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2a5084bd",
+   "id": "5fcc7e34",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7c5af53d",
+   "id": "70ca7892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "acdf428f",
+   "id": "d379e640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e053a202",
+   "id": "5191251f",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fe3b5458",
+   "id": "0a0859fc",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0454a5ad",
+   "id": "1ba395b4",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "53097fef",
+   "id": "0b4aad90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3fad09a3",
+   "id": "66e44e26",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5850eb66",
+   "id": "50348a52",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "42d567d2",
+   "id": "d774fd08",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "8aeccd5f",
+   "id": "1cb0a981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "d166859c",
+   "id": "9372e977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "e617abaf",
+   "id": "d9859f7e",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "6d909623",
+   "id": "9d7844d7",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c9c4f8d6",
+   "id": "8703ecde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "a222ffa2",
+   "id": "7a856bd9",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "854c2ef4",
+   "id": "c5c1a308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "56cc9486",
+   "id": "8e783dae",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac860c5",
+   "id": "89f81d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5cba53",
+   "id": "ffd86bd4",
    "metadata": {},
    "outputs": [],
    "source": [
