--- a/notebooks/testing/test_clip.ipynb
+++ b/notebooks/testing/test_clip.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7317999",
+   "id": "ccbbbf90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "f6653c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 18.14722 seconds to load file\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time.time()\n",
+    "features_file = '/user_data/mmhender/features/CLIP/PCA/S1_RN50_block13_PCA_grid5.h5py'\n",
+    "# Loading raw features.\n",
+    "with h5py.File(features_file, 'r') as data_set:\n",
+    "    values = np.copy(data_set['/features'][:,:,np.arange(10)])\n",
+    "    data_set.close() \n",
+    "elapsed = time.time() - t\n",
+    "print('Took %.5f seconds to load file'%elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "275ac3c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 100, 10)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c659dbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ac8761a122ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m             for mm in range(n_prfs)]\n\u001b[1;32m      6\u001b[0m \u001b[0mmax_pc_to_retain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnan_inds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mni\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmax_pc_to_retain\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mni\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnan_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnan_inds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# self.features_each_prf_batch = [feats_to_use[:,0:nan_inds[mm],mm] \\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-ac8761a122ee>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m             for mm in range(n_prfs)]\n\u001b[1;32m      6\u001b[0m \u001b[0mmax_pc_to_retain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnan_inds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mni\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmax_pc_to_retain\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mni\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnan_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnan_inds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# self.features_each_prf_batch = [feats_to_use[:,0:nan_inds[mm],mm] \\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+     ]
+    }
+   ],
+   "source": [
+    "n_prfs = values.shape[2]\n",
+    "image_inds = np.arange(15)\n",
+    "feats_to_use = values[image_inds,:,:]\n",
+    "nan_inds = [np.where(np.isnan(feats_to_use[0,:,mm])) \\\n",
+    "            for mm in range(n_prfs)]\n",
+    "max_pc_to_retain=100\n",
+    "nan_inds = [ni[0][0] if len(ni)>0 else max_pc_to_retain for ni in nan_inds]\n",
+    "print(nan_inds)\n",
+    "# self.features_each_prf_batch = [feats_to_use[:,0:nan_inds[mm],mm] \\\n",
+    "#             for mm in range(len(self.prf_batch_inds[batch_to_use]))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c8ed9c8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "       nan, nan, nan, nan, nan, nan, nan, nan, nan])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values[0,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
-   "id": "26da51d8",
+   "id": "5389816b",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "bd89efe3",
+   "id": "30b40d33",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9cf99b20",
+   "id": "fd9e4e0e",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "19c1de60",
+   "id": "7db246ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5fcc7e34",
+   "id": "34d418b5",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "70ca7892",
+   "id": "67539dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d379e640",
+   "id": "b24d9762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "5191251f",
+   "id": "66c9367f",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0a0859fc",
+   "id": "22b4083c",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1ba395b4",
+   "id": "9bf44151",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0b4aad90",
+   "id": "1fcba1f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "66e44e26",
+   "id": "3bc39367",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "50348a52",
+   "id": "959bb285",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "d774fd08",
+   "id": "9ec7ce11",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "1cb0a981",
+   "id": "07ba8d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9372e977",
+   "id": "972d9d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "d9859f7e",
+   "id": "ffda8777",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "9d7844d7",
+   "id": "bb4774ea",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "8703ecde",
+   "id": "fcec18eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "7a856bd9",
+   "id": "ede32a45",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "c5c1a308",
+   "id": "c5ceb849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "8e783dae",
+   "id": "08c0a9fb",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f81d45",
+   "id": "71d7e3ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd86bd4",
+   "id": "e24e39c0",
    "metadata": {},
    "outputs": [],
    "source": [
