updating plotting code

--- a/notebooks/plot_results/plot_alexnet_plus_midlevel.ipynb
+++ b/notebooks/plot_results/plot_alexnet_plus_midlevel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "752dd774",
+   "id": "e0034ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fc5ad0c",
+   "id": "832ea8b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "90d0ea3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 11, 3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_tmp['best_params'][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "b9155d88",
+   "id": "bd7e504d",
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +112,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "9506b347",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 13)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_list[4]['best_params'][5].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "51d778d5",
+   "id": "7103d594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f5298e6f",
+   "id": "0aae39b0",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "757768c1",
+   "id": "5cc5ad7f",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4c0eb5af",
+   "id": "6500e6a6",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c8ccf744",
+   "id": "0cf370a2",
    "metadata": {},
    "outputs": [
     {
