--- a/notebooks/plot_results/plot_midlevel_plus_semantic.ipynb
+++ b/notebooks/plot_results/plot_midlevel_plus_semantic.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "182d3ec5",
+   "execution_count": 1,
+   "id": "01ae39c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dd7f35d9",
+   "execution_count": 2,
+   "id": "e8cc07bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "67bd73c9",
+   "execution_count": 3,
+   "id": "8fdca182",
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,223 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "82dac5df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['full_combined_model',\n",
+       " 'just_gabor_solo',\n",
+       " 'leave_out_gabor_solo',\n",
+       " 'just_pyramid_texture',\n",
+       " 'leave_out_pyramid_texture',\n",
+       " 'pyramid_texture_just_lower-level_no_other_modules',\n",
+       " 'pyramid_texture_just_higher-level_no_other_modules',\n",
+       " 'pyramid_texture_just_lower-level_plus_other_modules',\n",
+       " 'pyramid_texture_just_higher-level_plus_other_modules',\n",
+       " 'just_sketch_tokens',\n",
+       " 'leave_out_sketch_tokens',\n",
+       " 'just_semantic',\n",
+       " 'leave_out_semantic']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['partial_version_names']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f39c7177",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_params'][0][:,0,0]==out['best_params'][0][:,:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b24b34e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "same = np.all(out['best_losses'][:,0:1]==out['best_losses'][:,:], axis=1)\n",
+    "np.all(same)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f846d6ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 13)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_lambdas'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e1f014f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "same = np.all(out['best_params'][0][:,0:1,0]==out['best_params'][0][:,:,0], axis=1)\n",
+    "np.all(same)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7d89ddd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(19738, 13, 3)\n",
+      "(19738, 838, 13)\n",
+      "(19738, 13)\n",
+      "(1456, 838)\n",
+      "(1456, 838)\n",
+      "(19738, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ii in range(6):\n",
+    "    print(out['best_params'][ii].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "76e709ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 13)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['val_cc'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "dbc0ab20",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'pop_recs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-7e0c7f11c940>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pop_recs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'pop_recs'"
+     ]
+    }
+   ],
+   "source": [
+    "out['pop_recs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9d3b47bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 6)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['discrim_each_axis'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
-   "id": "a00f5cd2",
+   "id": "ad38528a",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "101f0ee5",
+   "id": "bcf9804b",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a8fb10f6",
+   "id": "087589b2",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0c9e6543",
+   "id": "422d74e9",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c0951afe",
+   "id": "bbdfdf6e",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b60217a8",
+   "id": "0888071e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "512ed6f4",
+   "id": "2f4477c8",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b98ddf0a",
+   "id": "b32e2699",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ed21de83",
+   "id": "057ebd13",
    "metadata": {},
    "outputs": [
     {
