--- a/notebooks/plot_results/plot_sketch_tokens.ipynb
+++ b/notebooks/plot_results/plot_sketch_tokens.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "87f51f8b",
+   "execution_count": 1,
+   "id": "bda7b4bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a3ae9563",
+   "execution_count": 2,
+   "id": "3057133c",
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +95,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "192b77f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "same = np.all(out['best_params'][0][:,0:1,0]==out['best_params'][0][:,:,0], axis=1)\n",
+    "np.all(same)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "78b9a8dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 1, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_params'][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f0c30686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 150, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_params'][1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "982be69c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19738, 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_losses'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "d670d798",
+   "id": "4fb9e5a6",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "52d4272d",
+   "id": "e90dfcba",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "62b80ea0",
+   "id": "ee2261bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5730fb9c",
+   "id": "cb6e5d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bb5923cf",
+   "id": "f66e2770",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bf5ce368",
+   "id": "b391c700",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ee09c090",
+   "id": "d8d7be64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "774ea86b",
+   "id": "6dd27671",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a9ea1fb4",
+   "id": "f83b9964",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cbf6881f",
+   "id": "5a2b3c81",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b9f45737",
+   "id": "166b8730",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "67271173",
+   "id": "69bb503c",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de170d20",
+   "id": "3bf65ff6",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78df7bd6",
+   "id": "7e2c5b24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "697aece5",
+   "id": "46768994",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dd85851a",
+   "id": "913b5883",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e1383fc2",
+   "id": "41f416bf",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1d61d334",
+   "id": "31d362fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7847ff7f",
+   "id": "6c2e4a0c",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7522c8c1",
+   "id": "32bfe38f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "5654df86",
+   "id": "e72cd052",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "e76f5810",
+   "id": "aaf60c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "308375a0",
+   "id": "c47fb205",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "26607bfd",
+   "id": "22a34281",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "77f814b1",
+   "id": "e4105107",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5a2c2271",
+   "id": "b2feb9d4",
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2261c491",
+   "id": "d5e5d003",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "d9537011",
+   "id": "38ffc64f",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ac513e6e",
+   "id": "931b2d45",
    "metadata": {},
    "outputs": [
     {
