--- a/notebooks/plot_results/plot_stacking.ipynb
+++ b/notebooks/plot_results/plot_stacking.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d259ca1c",
+   "execution_count": 4,
+   "id": "ec769344",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,15 @@
     "import torch \n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "sys.path.append(os.path.join(root, 'code'))\n",
-    "from plotting_and_analysis import plot_utils, summary_plots, spatial_fits, analysis_utils\n",
-    "plot_utils.set_plotting_defaults()"
+    "from plotting import plot_utils, summary_plots, load_fits, plot_prf_params\n",
+    "plot_utils.set_plotting_defaults()\n",
+    "from utils import roi_utils, nsd_utils, default_paths, stats_utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ad9d24b7",
+   "execution_count": 5,
+   "id": "ba03b674",
    "metadata": {},
    "outputs": [
     {
@@ -89,8 +90,8 @@
     "fitting_type = 'texture_pyramid_ridge_4ori_4sf_plus_sketch_tokens_stacked'\n",
     "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
-    "out, fig_save_folder = analysis_utils.load_fit_results(subject, volume_space, fitting_type, n_from_end=0, root=root, verbose=True)\n",
-    "analysis_utils.print_output_summary(out)\n",
+    "out, fig_save_folder = load_fits.load_fit_results(subject, volume_space, fitting_type, n_from_end=0, root=root, verbose=True)\n",
+    "load_fits.print_output_summary(out)\n",
     "\n",
     "if not os.path.exists(fig_save_folder):\n",
     "    os.makedirs(fig_save_folder)"
@@ -98,8 +99,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "8db5c27b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14913,)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['stack_result'][4].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "550a2068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14913, 2)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['stack_result_lo'][0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "efbd20dc",
+   "id": "13a91c5b",
    "metadata": {
     "tags": []
    },
@@ -185,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44d7ae0c",
+   "id": "7b37af60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a261951e",
+   "id": "56879d7b",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "9795669a",
+   "id": "43f587ec",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "5d6d438b",
+   "id": "c68a1ae8",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b5751eb7",
+   "id": "a3e93041",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b5b869a6",
+   "id": "563ca87a",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b48f8e27",
+   "id": "55d631b9",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "be1d933a",
+   "id": "a9760b5a",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c5180b7c",
+   "id": "3a6e1b3a",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "699ae9e6",
+   "id": "d784917c",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "caaf953d",
+   "id": "5093ed2d",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f066408f",
+   "id": "15d7ac5e",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c0ab5300",
+   "id": "97c71302",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "70d454f0",
+   "id": "0206dcb6",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "9312393d",
+   "id": "c021b1fb",
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "db98ef45",
+   "id": "36bf99f2",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "89ef3d13",
+   "id": "ef4eb516",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a1fede77",
+   "id": "c5d552c4",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c63a74ea",
+   "id": "dc44d66f",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "acac0254",
+   "id": "709b2052",
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "77ec2a02",
+   "id": "2e0744dc",
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "53d0a7f0",
+   "id": "7c7d4cdb",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2a475f6b",
+   "id": "b0e41505",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "df7654ac",
+   "id": "31ad16e5",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "840311f2",
+   "id": "43712306",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "99048551",
+   "id": "dd8b3a5f",
    "metadata": {},
    "outputs": [
     {
