--- a/notebooks/plot_results/compare_semantic_discrim.ipynb
+++ b/notebooks/plot_results/compare_semantic_discrim.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3ab8f786",
+   "execution_count": 5,
+   "id": "82209448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5d1554af",
+   "id": "786d41af",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,28 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67e9bfe4",
+   "id": "4754adb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.arange(1,32,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b66c279b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8eacaeb8",
+   "id": "a30c03c1",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8d651372",
+   "id": "14826e94",
    "metadata": {},
    "outputs": [
     {
